--- a/pom.xml
+++ b/pom.xml
@@ -365,6 +365,11 @@
 		    <artifactId>stringtemplate</artifactId>
 		    <version>4.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 		
 	</dependencies>
     <build>
